# ironic-python-agent

./: .git-blame-ignore-revs  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .testr.conf  .travis.yml  CONTRIBUTING.rst  Dockerfile  Makefile  README.md  README.rst  bindep.txt  dev-requirements.txt  lower-constraints.txt  main.py  openstack-common.conf  plugin-requirements.txt  proxy.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: build-ipa-image.yml  tests.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst  metrics.rst  troubleshooting.rst
etc/ironic_python_agent/: ironic_python_agent.conf.sample
examples/: README.rst
examples/business-logic/: example_business_logic.py  setup.cfg
examples/custom-disk-erase/: example_disk_eraser.py  setup.cfg
examples/vendor-device/: example_device.py  setup.cfg
imagebuild/: README.md  README.rst
imagebuild/common/: extract_upper_constraints_from_tox_ini.sh  generate_upper_constraints.sh
imagebuild/coreos/: Makefile  README.md  README.rst  build_coreos_image.sh  coreos-oem-inject.py  docker_build.bash  docker_clean.bash  full_trusty_build.sh  iso-image-create  pin_latest_coreos.sh  requirements.txt  version.txt
imagebuild/tinyipa/: .gitignore  Makefile  README.rst  add-ssh-tinyipa.sh  build-instance-images.sh  build-iso.sh  build-tinyipa.sh  common.sh  finalise-tinyipa.sh  install-deps.sh  tc-mirror.sh  udhcpc.script
ironic_python_agent/: __init__.py  agent.py  backoff.py  base.py  burnin.py  config.py  configdrive.py  decom.py  decorators.py  device_hints.py  disk_partitioner.py  disk_utils.py  dmi_inspector.py  efi_utils.py  encoding.py  errors.py  fake_ipa.py  flow.py  format_inspector.py  hardware.py  inject_files.py  inspect.py  inspector.py  ironic_api_client.py  mdns.py  netutils.py  numa_inspector.py  partition_utils.py  qemu_img.py  raid_utils.py  standby.py  tls_utils.py  utils.py  version.py
ironic_python_agent/api/: app.py  config.py  request_log.py
ironic_python_agent/cmd/: agent.py  inspect.py
ironic_python_agent/extensions/: base.py  clean.py  decom.py  deploy.py  flow.py  image.py  iscsi.py  log.py  poll.py  rescue.py  service.py  standby.py  system.py
ironic_python_agent/hardware_managers/: cna.py  container.py  mlnx.py  update_fw.py
ironic_python_agent/metrics_lib/: metrics.py  metrics_collector.py  metrics_exception.py  metrics_statsd.py  metrics_utils.py
ironic_python_agent/shell/: copy_configdrive_to_disk.sh  reboot.sh  shutdown.sh  write_image.sh
ironic_python_agent/tests/: agent.py  api.py  backoff.py  base.py  configdrive.py  decom.py  errors.py  flow.py  hardware.py  ironic_api_client.py  multi_hardware.py  netutils.py  standby.py  utils.py
playbooks/ironic-python-agent-buildimage/: post.yaml  pre-dib.yaml  run.yaml
releasenotes/: config.yaml
releasenotes/notes/: 4k-block-size-config-drives-4470828dd06d2600.yaml  Collect_NIC_name_given_by_BIOS-657c68c0ae16365b.yaml  LLDP-ignore-NICs-that-are-not-plugged-in-29213f0a701a72e4.yaml  ability-to-disable-secure-erase-c3223262726d5aff.yaml  add-block-device-uuid-c8b38264e1688110.yaml  add-coreos-dhcp-rescue-support-1dd8e9d5ac9c7594.yaml  add-disk-wait-config-opts-fe805292baca8029.yaml  add-erase-devices-express-1df107c75f2b3627.yaml  add-hostname-8bbf24712b6a4919.yaml  add-inspection-retry-1d385f69607c1452.yaml  add-is_root_volume-functionality-02340c3887b882e8.yaml  add-log-extension-35ca22cc0709af4c.yaml  add-more-lan-channels-8f5197ed5f057c25.yaml  add-named-logfiles-to-burnin-4388309bf7442d53.yaml  add-numa-topology-info-8c253fd9e56169f1.yaml  add-optional-tls-support-3ab6a834154fedec.yaml  add-pci-devices-info-3f86934a505d1b31.yaml  add-portal-port-arg-6d4faec2f709c8e9.yaml  add-secondary-sorting-by-name-for-root-disks-4de2c0358b9a1e2c.yaml  add-service-steps-support-655cc02d112ed0a8.yaml  add-smart-test-to-disk-burnin-d02d31e23e5efa9a.yaml  add-support-for-bootc-70b8a4546b176ab4.yaml  add-support-for-burnin-gpu-76c8c267529a18bd.yaml  add-unit-test-cc4a1a05859ad17d.yaml  add-vendor-info-56be9a8605d80bf0.yaml  add-vlan-interfaces-cdfeb39d0f3d444d.yaml  add_burnin_cpu-9acbb36048246a6b.yaml  add_burnin_disk-12adb5735a41af47.yaml  add_burnin_dynamic_network_pairing-33e398255050eb98.yaml  add_burnin_memory-4099ca42bd3b99db.yaml  add_burnin_network-4856153d21c25f4a.yaml  add_erase_pstore-b109c58ed8f5d351.yaml  add_interface_vendor_and_product-74e9815f20ee0cac.yaml  add_mellanox_hardware_manager-edfae87964737df1.yaml  additional-wwn-hints-ffd02ceafcb3dc70.yaml  adds-nvme-secure-erase-0ecfd624e5f50581.yaml  adds-smartctl-ata-check-to-secure-erase-caebba4f25821575.yaml  advertise-address-c3b152fe475fb539.yaml  advertise-protocol-110ae1587f727e62.yaml  agent-fully-retries-image-downloads-67409a493c6d08ae.yaml  (+312 more)
releasenotes/source/: 2023.1.rst  2023.2.rst  2024.1.rst  conf.py  current-series.rst  index.rst  liberty.rst  mitaka.rst  newton.rst  ocata.rst  pike.rst  queens.rst  rocky.rst  stein.rst  train.rst  ussuri.rst  victoria.rst  wallaby.rst  xena.rst  yoga.rst  zed.rst
scripts/: bootstrap-virtualenv.sh  python-lint.py
teeth/agent/: protocol.py
teeth_agent/: __init__.py  agent.py  api.py  base.py  base_task.py  cache_image.py  client.py  configdrive.py  decom.py  decorators.py  errors.py  events.py  hardware.py  log.py  logging.py  overlord_agent_api.py  protocol.py  service.py  standby.py  task.py  utils.py
teeth_agent/api/: app.py  config.py
teeth_agent/cmd/: agent.py  decom.py  standby.py
teeth_agent/scripts/: teeth-agent.py
teeth_agent/shell/: __init__.py  makefs.sh  reboot.sh  write_image.sh
teeth_agent/tests/: __init__.py  agent.py  api.py  base_agent.py  configdrive.py  decom.py  decom_agent.py  hardware.py  log.py  logging.py  overlord_agent_api.py  standby.py  standby_agent.py  test_events.py  test_protocol.py  test_task.py
teeth_agent/utils/: test_prepare.py
tools/: bandit.yml  run_bashate.sh
tools/config/: check_uptodate.sh  (+2 more)
zuul.d/: ironic-jobs.yaml  ironic-python-agent-jobs.yaml  legacy-ironic-jobs.yaml  project.yaml
(+141 files in other folders)
