[metadata]
name = ironic-python-agent
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org
summary = Ironic Python Agent Ramdisk
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
[files]
packages =
    ironic_python_agent

[entry_points]
console_scripts =
    ironic-python-agent = ironic_python_agent.cmd.agent:run

ironic_python_agent.extensions =
    standby = ironic_python_agent.extensions.standby:StandbyExtension
    clean = ironic_python_agent.extensions.clean:CleanExtension
    flow = ironic_python_agent.extensions.flow:FlowExtension
    iscsi = ironic_python_agent.extensions.iscsi:ISCSIExtension
    image = ironic_python_agent.extensions.image:ImageExtension
    log = ironic_python_agent.extensions.log:LogExtension

ironic_python_agent.hardware_managers =
    generic = ironic_python_agent.hardware:GenericHardwareManager

ironic_python_agent.inspector.collectors =
    default = ironic_python_agent.inspector:collect_default
    logs = ironic_python_agent.inspector:collect_logs
    extra-hardware = ironic_python_agent.inspector:collect_extra_hardware
    pci-devices = ironic_python_agent.inspector:collect_pci_devices_info

[pbr]
autodoc_index_modules = True
warnerrors = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
