[metadata]
name = ironic-python-agent
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/ironic-python-agent/
summary = Ironic Python Agent Ramdisk
license = Apache-2
python_requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    ironic_python_agent

[entry_points]
oslo.config.opts =
    ironic-python-agent = ironic_python_agent.config:list_opts

console_scripts =
    ironic-python-agent = ironic_python_agent.cmd.agent:run
    ironic-collect-introspection-data = ironic_python_agent.cmd.inspect:run

ironic_python_agent.extensions =
    standby = ironic_python_agent.extensions.standby:StandbyExtension
    clean = ironic_python_agent.extensions.clean:CleanExtension
    deploy = ironic_python_agent.extensions.deploy:DeployExtension
    flow = ironic_python_agent.extensions.flow:FlowExtension
    image = ironic_python_agent.extensions.image:ImageExtension
    log = ironic_python_agent.extensions.log:LogExtension
    rescue = ironic_python_agent.extensions.rescue:RescueExtension
    poll = ironic_python_agent.extensions.poll:PollExtension
    service = ironic_python_agent.extensions.service:ServiceExtension

ironic_python_agent.hardware_managers =
    generic = ironic_python_agent.hardware:GenericHardwareManager
    mlnx = ironic_python_agent.hardware_managers.mlnx:MellanoxDeviceHardwareManager
    cna = ironic_python_agent.hardware_managers.cna:IntelCnaHardwareManager

ironic_python_agent.inspector.collectors =
    default = ironic_python_agent.inspector:collect_default
    logs = ironic_python_agent.inspector:collect_logs
    extra-hardware = ironic_python_agent.inspector:collect_extra_hardware
    pci-devices = ironic_python_agent.inspector:collect_pci_devices_info
    numa-topology = ironic_python_agent.numa_inspector:collect_numa_topology_info
    dmi-decode = ironic_python_agent.dmi_inspector:collect_dmidecode_info
    lldp = ironic_python_agent.inspector:collect_lldp
    usb-devices = ironic_python_agent.inspector:collect_usb_devices

[extras]
burnin-network-kazoo =
    kazoo>=2.8.0 # Apache-2.0

[codespell]
quiet-level = 4
# Words to ignore:
# cna: Intel CNA card
# assertin: valid method in testing
# burnin: name of our burn in methods
ignore-words-list = cna,assertin,burnin
skip = ./releasenotes/build,./venv,./doc/build
