[metadata]
name = example-business-logic
author = Jay Faulkner
author-email = jay@jvf.cc
summary = IPA Example Hardware Managers: Business Logic
license = Apache-2
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[files]
modules =
    example_business_logic

[entry_points]
ironic_python_agent.hardware_managers =
    example_business_logic = example_business_logic:ExampleBusinessLogicHardwareManager
