[metadata]
name = example-disk-eraser
author = Jay Faulkner
author-email = jay@jvf.cc
summary = IPA Example Hardware Managers: Example Disk Eraser
license = Apache-2
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

[files]
modules =
    example_disk_eraser

[entry_points]
ironic_python_agent.hardware_managers =
    example_disk_eraser = example_disk_eraser:ExampleDiskEraserHardwareManager
