[metadata]
name = example-vendor-device
author = Jay Faulkner
author-email = jay@jvf.cc
summary = IPA Example Hardware Managers: Vendor Device
license = Apache-2
classifier =
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta

[files]
modules =
    example_device

[entry_points]
ironic_python_agent.hardware_managers =
    example_device = example_device:ExampleDeviceHardwareManager
